# cliwrap-python

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: development.yml  main.yaml
cliwrap/: cliwrap.py
