[tool.poetry]
name = "cliwrap-python"
version = "0.0.0"
description = "A lightweight wrapper around CLIs for error handling and logging."
authors = ["Olivier Van Aken <olivier.va@outlook.com>"]
license = "MPL-2.0"

packages = [
    { include = "cliwrap" }
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
